ticket #1455 - fix paragraph alignment issues when certain elements are missing in content

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/entrypoints/cthp/CTHP.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/entrypoints/cthp/CTHP.scss
@@ -57,7 +57,7 @@
   clear: left;
 
   h2 {
-    margin-top: 0px;
+    margin-top: 0;
     float: left;
     width: 55%;
   }
@@ -140,8 +140,13 @@
 .cthp-pdq-label {
   margin-top: 0;
 }
+
 .cardBody p {
   font-size: 1em;
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 // Foundation grid components need to be overwritten
@@ -208,7 +213,7 @@
 
 .cthp-overview .cardBody {
   p {
-    margin-top: 2px;
+    margin-top: 0;
     a:before {
       content: none;
     }
@@ -217,7 +222,7 @@
 
 .cthpCard .rawHtml .cardBody {
   p {
-    margin-top: 2px;
+    margin-top: 0;
   }
   a.arrow-link {
     margin-top: 8px;
@@ -233,7 +238,7 @@
 
 .cthp-research .cardBody {
   p {
-    margin-top: 2px;
+    margin-top: 0;
     margin-bottom: 2px;
     a {
       display: block;
@@ -250,7 +255,7 @@
 
 .more-info-list ul li:before,
 .cthp-pdq-label ul li:before,
-.cardBody h4 + ul li:before,
+.cardBody ul li:before,
 .cardBody p a:before {
   content: "\2022";
   display: inline-block;
@@ -555,7 +560,7 @@ figure.cthp-mm-video-playlist {
                 width: 30px;
               }
             }
-            
+
             &:hover {
               a {
                 color: $white;
